# epidemic_sound

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py  sound_controller.py
app/application/: playlist_service.py  sound_service.py
app/application/interfaces/: playlist_repository.py  sound_repository.py
app/infrastructure/: database.py  playlist_repo.py  sound_repo.py
app/schemas/: playlist_schema.py  sound_schema.py
app/tests/: test_playlist_service.py  test_sound_service.py
